--- a/help.html
+++ b/help.html
@@ -54,7 +54,7 @@
       </div>
     </div>
 
-    <form action="https://submit-form.com/0wX4FjDE5" method="post">
+    <form action="https://formspree.io/f/mnqekedz" method="post">
       <div
         class="relative flex border bg-[#e9ebee] h-10 md:hidden lg:hidden sm:block"
       >
