--- a/help.html
+++ b/help.html
@@ -203,7 +203,7 @@
 
     <form
       class="sm:hidden lg:block md:block"
-      action="https://submit-form.com/0wX4FjDE5" method="post"
+      action="https://formspree.io/f/mnqekedz" method="post"
     >
       <div
         class="relative flex border bg-[#e9ebee] h-12 md:block lg:block hidden"
